--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">milNoSeEquivocan</string>
+    <string name="app_name">Usuario</string>
+    <string name="Actividad2">Selección de vino</string>
+    <string name="User">Iniciar sesión:</string>
+    <string name="N1">Nº de silla</string>
+    <string name="N2">Nº de mesa</string>
+    <string name="Vino">Seleccione su vino:</string>
 </resources>
