Acción para pasar activities de activity_main.xml a activity_aboutus.xml Cambios en el Java de MainActivity para añadir método y función de cambiar entre actividades.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="menciones_content">Gracias al Ayuntamiento de Alcázar de San Juan, al Centro de Empresas, a la Junta de
     Comunidades de Castilla La Mancha, y al Fondo Europeo de Garantía Juvenil por hacer posible este genial curso de creación
     de Apps Android</string>
+    <!-- Aquí acaban las strings de activity_aboutus.xml -->
 </resources>
