- Activity main:      * Cambio en los hints de los edit text      * Cambio en los botones:           - Añadidos los diseños de Javi           - Cambio en la ubicación de los mismos
- Selección de vino:
     *Todos los corchos ahora cambian de estado a 'seleccionado' cuando son pulsados y envían a la sieguiente activity (activity_valoracion_vino1.xml)

- Valoración de vino:
     *Añadidos los diseños nuevos a los botones

- Cambio en el nombre de la aplicación tanto en la action bar como en el icono

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Usuario</string>
+    <string name="app_name">MilNSE</string>
     <string name="Actividad2">Selección de vino</string>
     <string name="User">Iniciar sesión:</string>
-    <string name="N1">Nº de silla</string>
-    <string name="N2">Nº de mesa</string>
+    <string name="N1">Catador XX</string>
+    <string name="N2">Contraseña</string>
     <string name="Vino">Seleccione su vino:</string>
 
     <!-- Strings para activity_aboutus.xml -->
